<resources>
    <string name="app_name">全脑教育</string>

    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="titulocaratula">Mandalas para pintar</string>
    <string name="menu_settings">Settings</string>
    <string name="colorpicker">Cambiar Color</string>
    <string name="Siguienteimagen">Siguiente Imagen</string>
    <string name="Anteriorimagen">Anterior Imagen</string>
    <string name="pickcolor">Elija un color</string>
    <string name="rotaImagen">Rotar Imagen</string>
    <string name="sounds">Sonido de Fondo</string>
    <string name="efects">Efectos</string>
    <string name="salvar">Save</string>
    <string name="salir">Salir</string>
    <string name="aIndice">Inicio</string>
    <string name="ayuda">Ayuda</string>
    <string name="borrar">Borrar</string>
    <string name="send_to">Compartir</string>
    <string name="continuar">Continuar</string>
    <string name="eligeColor">Elige</string>
    <string name="rate">Valora</string>
    <string name="dontshowagain">No volver a mostrar</string>
    <string name="recuerdame">Recordarme mas tarde</string>
    <string name="ifenjoy">Si te gusta</string>
    <string name="pleaserateus">, por favor, tomate un momento para valorarnos!</string>
    <string name="atencion">Atencion!</string>
    <string name="entiendo">Entiendo</string>
    <string name="limite">Se superó la cantidad de archivos que se pueden guardar!</string>
    <string name="seperdera">Se perdera el dibujo actual!</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="compartir">Compartir</string>
    <string name="sobrecolores">Sobre los Colores</string>
    <string name="sobreformas">Sobre las formas</string>



    <string name="home_title_text">全脑教育酷 • 记软件</string>

    <string name="home_title_left_text">我的积分%d</string>
    <string name="home_1_text">21天训练</string>
    <string name="home_2_text">90天养成良好习惯</string>
    <string name="home_3_text">综合训练</string>
    <string name="home_4_text">教育资讯</string>

    <string name="practice_21_day_title_right_text">帮助说明</string>


    <string name="net_error">请检查网络连接</string>
    <string name="request_error">获取数据失败</string>
</resources>
